Fixed resizing menu button on smaller resolutions

--- a/24 - Responsive Website/responsive-START.css
+++ b/24 - Responsive Website/responsive-START.css
@@ -193,7 +193,11 @@ img {
   }
 
   .menu button {
-    display: block;
+    display: grid;
+    grid-template-columns: 20px 1fr;
+    grid-template-rows: 20px;
+    grid-gap: 15px;
+    padding: 10px 8px;
   }
 
   [aria-controls="menu-list"] {
